clusterA/NetworkPolicy-tenant1.yml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: tenant1-allow-a
  namespace: tenant1
spec:
  selector: color == 'red'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: color == 'blue'
    destination:
      ports:
        - 6379
