clusterA/tenant1.yml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: team1-allow-a
  namespace: team1
spec:
  selector: color == 'red'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: color == 'blue'
    destination:
      ports:
        - 6379
