clusterA/tenant2.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: tenant2-allow-a
  namespace: tenant2
spec:
  selector: color == 'red'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: color == 'blue'
    destination:
      ports:
        - 6379
